# wasm-qrcode

./: .gitignore  .gitmodules  BENCHMARK_REPORT.md  CHANGESETS.md  COMPARE_SVG_GUIDE.md  Cargo.toml  GITHUB_RELEASE.md  LICENSE  PUBLISH.md  README.md  WASM_VALUE.md  benchmark.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rspress.config.ts  rsw.toml  tscfg.json  tsconfig.json  vite.config.ts  vitest.config.browser.ts  vitest.config.ts
.agents/skills/: BENCHMARK.md  SKILL.md
.agents/skills/qrcodes-dev/: SKILL.md
.agents/skills/qrcodes-dev/references/: api-consistency.md  api-patterns.md  architecture.md
.agents/skills/qrcodes-dev/scripts/: build-all.ps1  check-api-consistency.ps1  test-all.ps1
.changeset/: README.md  config.json  fair-chairs-obey.md  init-alpha-npm.md  init-alpha-rust.md
.claude/: settings.local.json
.github/workflows/: README.md  ci.yml  docs.yml  pr-check.yml  release.yml  weekly.yml
.rsw/: rsw.crates  rsw.err  rsw.info
bench/: README.md
bench/backend-benchmark/: README.md  index-fast.ts  index.ts  package.json
bench/backend-benchmark-pk/: index-fast.ts  index.ts  package.json
bench/benchmark-cross-backend/: README.md  index.ts  package.json
bench/compare_rust/: Cargo.toml  README.md
bench/compare_rust/src/: main.rs
bench/frontend-benchmark/: README.md  benchmark.cjs  frontend_benchmark_result.json  wasm.benchmark.ts
bench/qrcode-fast-tools/: Cargo.toml  README.md
bench/qrcode-fast-tools/src/: lib.rs  validation.rs
bench/rust-tools/: Cargo.toml  README.md
bench/rust-tools/src/: validation.rs
bench/scripts/: run.js
bench/svg-benchmark/: README.md  index.js  node-bun.js  rust.js
docs/: TESTING.md  demo.mdx  index.md  rspress.config.ts  tsconfig.json
docs/api/: cache.md  core.md  index.md  rust.md  wasm.md
docs/bench/: backend-bench.mdx  backend-pk.mdx  compare-rust.mdx  front-bench.mdx  index.mdx  svg-benchmark.mdx
docs/components/: BenchmarkCharts.tsx  PKBenchmarkDashboard.tsx  QRCodeDemo.tsx
docs/guide/: index.md  index.mdx  performance.md  qrcode-fast.md  qrcode-js.mdx  qrcode-node.md  qrcode-rust.md  qrcode-shared.md  qrcode-ts.md  qrcode-wasm.md  qrcodejs.md  qrcodejs.mdx  quick-start.md  quick-start.mdx  shared.md
docs/public/: backend_benchmark_pk.json  backend_benchmark_pk_summary.json  benchmark_bun_result.json  benchmark_node_result.json  benchmark_rust_result.json  benchmark_summary.json  benchmark_svg_rust.json
examples/: usage-guide.md
examples/vite-react-qrcode-wasm/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
examples/vite-react-qrcode-wasm/src/: App.tsx  vite-env.d.ts
examples/vite-vue-qrcode-wasm/: .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
examples/vite-vue-qrcode-wasm/src/components/: HelloWorld.vue
public/: benchmark-final.mjs  benchmark.html  benchmark_bun_result.json  benchmark_node_result.json  benchmark_result.json  benchmark_rust_result.json  benchmark_summary.json
qrcodejs/: README.md  index.html  package.json
qrcodejs/src/: index.js  qr-canvas.js  qr-code.js  qr-drawing.js  qr-svg.js  qr8bitByte.js  qrCodeModel.js  qrRsBlock.js  qrcode.d.ts  qrcode.js  qrpolynomial.js
qrcodejs/src/shared/: constants.js  utils.js
qrcodejs/src/tests/: index.js
qrcodejs/tests/: tests-how-generate-modules.html
scripts/: BENCHMARK_README.md  README.md  benchmark-backend.js  benchmark-clean.js  benchmark-js-packages.js  benchmark-svg-full.js  benchmark-svg-js.js  benchmark-svg-rust.js  benchmark-svg.js  benchmark.js  clean.js  compare_svg_node.js  publish-check.js  publish.js  test.js
skills/: BENCHMARK.md  SKILL.md  qrcodes-dev.skill
skills/qrcodes-dev/: SKILL.md
skills/qrcodes-dev/references/: api-consistency.md  architecture.md
skills/qrcodes-dev/scripts/: build-all.ps1
src/: App.vue  Benchmark.vue  Home.vue  vite-env.d.ts
tests/: README.md
tests/qrcode-bun/: index.test.ts
tests/qrcode-js/: index.test.ts
tests/qrcode-node/: index.test.ts
tests/qrcode-shared/: index.test.ts  validation.test.ts
tests/qrcode-wasm/: index.browser.test.ts  index.test.ts  pkg.test.ts
wasm-qrcode/: Cargo.toml  README.md
wasm-qrcode/src/: QR8bitByte_class.rs  QRBitBuffer_class.rs  canvas_renderer.rs  code.rs  lib.rs  main.rs  qr_generator.rs  qr_math.rs  qr_styled.rs  rs_block.rs  shared.rs  utils.rs
wasm-qrcode/tests/: qrcode.js  web.rs
wasm-qrcode/tests/src/: qr-canvas.js  qr-drawing.js  qr-no-canvas.js  qr8bitByte.js  qrBitBuffer.js  qrCodeModel.js  qrRsBlock.js  qrcode.js  qrpolynomial.js
wasm-qrcode/tests/src/shared/: constants.js  utils.js
