[package]
name = "wasm-qrcode"
version = "0.1.0"
authors = ['veaba< Godpu@outlook.com>']
description = "QRcode for rust wasm."
repository = "https://github.com/veaba/wasm-qrcode"
license = "MIT"
edition  = '2021'

[lib]
crate-type = ["cdylib","rlib"]

[features]
default = ['console_error_panic_hook']

[dependencies]
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version= "0.1.6", optional = true}
wee_alloc = { version = "0.4.5",optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"