[package]
name = "rust-tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qrcode-fast = { path = "../../packages/qrcode-fast" }
qrcode-rust = { path = "../../packages/qrcode-rust" }
qrcode-kennytm = { package = "qrcode", version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 验证依赖
resvg = { version = "0.44", optional = true }
rqrr = { version = "0.7", optional = true }
image = { version = "0.25", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["validation"]
validation = ["resvg", "rqrr", "image", "chrono"]

# ==================== 生成工具 ====================
[[bin]]
name = "simple-qr"
path = "src/bin/simple_qr.rs"

[[bin]]
name = "fast-qr"
path = "src/bin/fast_qr.rs"

[[bin]]
name = "real-qr"
path = "src/bin/real_qr.rs"

[[bin]]
name = "validate-qr"
path = "src/bin/validate_qr.rs"

[[bin]]
name = "validate-external-svg"
path = "src/bin/validate_external_svg.rs"

[[bin]]
name = "veaba-qr"
path = "src/bin/veaba_qr.rs"

# ==================== 对比工具 ====================
[[bin]]
name = "compare-impls"
path = "src/bin/compare_impls.rs"

# ==================== 调试工具 ====================
[[bin]]
name = "debug-qr"
path = "src/bin/debug_qr.rs"

[[bin]]
name = "debug-finder"
path = "src/bin/debug_finder.rs"

[[bin]]
name = "debug-compare"
path = "src/bin/debug_compare.rs"

# ==================== 验证工具 ====================
[[bin]]
name = "verify-kennytm"
path = "src/bin/verify_kennytm.rs"

# ==================== 报告工具 ====================
[[bin]]
name = "benchmark-report"
path = "src/bin/benchmark_report.rs"

[[bin]]
name = "benchmark-kennytm"
path = "src/bin/benchmark_kennytm.rs"

[[bin]]
name = "benchmark-full"
path = "src/bin/benchmark_full.rs"

[[bin]]
name = "debug-data"
path = "src/bin/debug_data.rs"

[[bin]]
name = "debug-rs"
path = "src/bin/debug_rs.rs"
